backends/drm: use dumb buffers for the cursor on virtual machines

Apparently not all VM drivers handle dmabufs on the cursor plane correctly

BUG: 485827
(cherry picked from commit c14c61f74595c94d3533093ade45aea06ae45e28)